# repo2pdf

./: README.md  pyproject.toml
src/: main.py  pdf_generator.py  tree_builder.py
src/repo2pdf/: __init__.py  cli.py  font_setup.py  fonts.py  generator.py  languages.py  markdown.py  tree.py
tests/: test_generator.py  test_languages.py  test_markdown.py  test_tree.py
